# mlbb

./: README.md
client/: .gitignore
client/Assets/: MemoryManager.cs
client/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  (+1 more)
schema/: com.arpc  env.arpc  global.arpc  proto.arpc  struct.arpc  structold.arpc
server/: .gitignore  CMakeLists.txt  Config.h.in  README.md
server/cmake/: FindACE.cmake  linux.cmake  macros.cmake  windows.cmake
server/common/: Base64.cpp  CMakeLists.txt  CSVParser.cpp  CSVParser.h  ComEnv.cpp  ComEnv.h  ComGlobal.cpp  ComGlobal.h  ComScriptApi.cpp  ComScriptApi.h  ComScriptEvn.cpp  ComScriptEvn.h  ComScriptHeader.h  ComScriptRegster.h  CppSQLite3.cpp  CppSQLite3.h  GlobalConstants.h  HttpParser.cpp  HttpParser.h  LinuxCommon.cpp  LinuxCommon.h  Logger.cpp  Logger.h  MD5.cpp  MD5.h  PeriodEvent.cpp  PeriodEvent.h  SqlCommon.h  TokenParser.cpp  TokenParser.h  UtlMath.cpp  UtlMath.h  config.cpp  config.h  coredump.h  gzip.cpp  gzip.h  predef.h  timer.cpp  timer.h
server/common/ace/: BINChannel.h  BINChannelBroadcaster.h  BINChannelConnection.h  BINCompressConnection.h  BINConnection.h  Channel.cpp  Channel.h  ChannelBroadcaster.h  ChannelConnection.cpp  ChannelConnection.h  CompressConnection.cpp  CompressConnection.h  Connection.cpp  Connection.h
server/common/gen_rpc/: BacklogMethods.h  Client2ServerMethods.h  SGE_DB2WorldMethods.h  SGE_GMT2WorldMethods.h  SGE_Gateway2WorldMethods.h  SGE_LogMethods.h  SGE_Login2WorldMethods.h  SGE_Mall2WorldMethods.h  SGE_Player_Scene2WorldMethods.h  SGE_Player_World2SceneMethods.h  SGE_World2DBMethods.h  SGE_World2LoginMethods.h  SGE_World2MallMethods.h  SGE_World2SceneMethods.h  Server2ClientMethods.h  com.cpp  com.h  env.cpp  env.h  global.cpp  global.h  proto.cpp  proto.h  struct.cpp  struct.h  structold.cpp  structold.h
server/common/lua/: lmathlib.c  lopcodes.h  lua.h  luac.c
server/common/nedmalloc/: nedmalloc.cc  nedmalloc.h
server/common/rpc/: Common.h  EnumInfo.h  FieldMask.h  ProtocolBytesReader.h  ProtocolBytesWriter.h  ProtocolMemReader.h  ProtocolMemWriter.h  ProtocolReader.h  ProtocolWriter.h
server/db/: CMakeLists.txt  Mail.cpp  handler.cpp  handler.h  main.cpp  routine.cpp  routine.h  server.cpp  server.h  sqltask.cpp  sqltask.h
server/db/routine/: BabyRoutine.cpp  DBActivity.cpp  DBGuild.cpp  DeletePlayer.cpp  EmployeeRoutine.cpp  InsertEndlessStair.cpp  InsertPlayer.cpp  QueryEndlessAllDate.cpp  QueryPlayer.cpp  QueryPlayerById.cpp  QueryPlayerByLevel.cpp  UpdataEndlessStair.cpp  UpdatePlayer.cpp
server/gateway/: CMakeLists.txt  clientChannel.cpp  clientChannel.h  clientHandler.cpp  clientHandler.h  gwserv.cpp  gwserv.h  main.cpp  worldhandler.cpp  worldhandler.h
server/gmtool/: CMakeLists.txt  GMTCdkeyGift.cpp  GMTCommand.cpp  GMTInsertMail.cpp  GMTNotice.cpp  GMTQueryRole.cpp  SQLHelper.cpp  SQLHelper.h  activities.cpp  handler.cpp  handler.h  main.cpp  routine.cpp  routine.h  server.cpp  server.h  sqltask.cpp  sqltask.h
server/log/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  routine.cpp  routine.h  server.cpp  server.h  sqltask.cpp  sqltask.h
server/login/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  routine.cpp  routine.h  server.cpp  server.h  sqltask.h
server/login/routine/: InsertAccount.cpp  QueryAccount.cpp
server/mall/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  routine.cpp  routine.h  server.cpp  server.h  sqltask.cpp  sqltask.h
server/refreshsql/: CMakeLists.txt  product.cpp  product.h  translation.h
server/robot/: CMakeLists.txt  entry.cpp  robot.cpp  robot.h
server/scene/: CMakeLists.txt  ChunkyTriMesh.cpp  ChunkyTriMesh.h  DetourCommon.cpp  DetourCrowd.cpp  DetourCrowd.h  DetourLocalBoundary.cpp  DetourLocalBoundary.h  DetourMath.h  DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshBuilder.cpp  DetourNavMeshBuilder.h  DetourNavMeshQuery.cpp  DetourNavMeshQuery.h  DetourNode.cpp  DetourNode.h  DetourObstacleAvoidance.cpp  DetourObstacleAvoidance.h  DetourPathCorridor.cpp  DetourPathCorridor.h  DetourPathQueue.cpp  DetourPathQueue.h  DetourProximityGrid.cpp  DetourProximityGrid.h  DetourTileCache.cpp  DetourTileCache.h  DetourTileCacheBuilder.cpp  InputGeom.cpp  InputGeom.h  NavMesh.cpp  NavMesh.h  ObjFile.cpp  ObjFile.h  Recast.cpp  Recast.h  RecastAlloc.cpp  RecastAlloc.h  RecastArea.cpp  RecastContour.cpp  (+18 more)
server/tables/: Activities.cpp  Activities.h  ArtifactChangeData.cpp  ArtifactChangeData.h  ArtifactConfigTable.cpp  ArtifactConfigTable.h  ArtifactLevelTable.cpp  ArtifactLevelTable.h  BattleData.cpp  BattleData.h  CMakeLists.txt  DailyReward.cpp  DailyReward.h  DebrisTable.cpp  DebrisTable.h  DropTable.cpp  DropTable.h  EmployeeConfig.cpp  EmployeeConfig.h  EmployeeQuestTable.cpp  EmployeeQuestTable.h  FilterWord.cpp  FilterWord.h  GameEvent.cpp  GameEvent.h  GuildData.cpp  GuildData.h  LiveSkilltable.cpp  LiveSkilltable.h  LotteryTable.cpp  LotteryTable.h  PVPrunkTable.cpp  PVPrunkTable.h  Quest.cpp  Quest.h  Shop.cpp  Shop.h  TableSystem.cpp  TableSystem.h  achievementTable.cpp  (+31 more)
server/test/: CMakeLists.txt  action.cpp  action.h  case.cpp  case.h  case.inl  main.cpp  task.cpp  task.h
server/world/: Activity.cpp  Activity.h  CMakeLists.txt  EmployeeQuestSystem.cpp  EmployeeQuestSystem.h  EndlessStair.cpp  EndlessStair.h  GMCmdMgr.cpp  GMCmdMgr.h  GMThandler.cpp  GMThandler.h  GameRuler.cpp  GameRuler.h  Guild.cpp  Guild.h  InnerPlayer.cpp  InnerPlayer.h  MallHandle.cpp  MallHandle.h  PlayerChat.cpp  Robot.cpp  Robot.h  Scene.cpp  Scene.h  ShowDataTemplate.h  Storage.cpp  account.cpp  account.h  achuevement.cpp  baby.cpp  baby.h  battle.cpp  battle.h  battleAPI.cpp  battleCreat.cpp  battleLog.cpp  battleOrderMgr.cpp  battleStateMgr.cpp  broadcaster.cpp  broadcaster.h  (+49 more)
server/world/script/: GameScript.cpp  GameScript.h  ScriptHandle.cpp  ScriptHandle.h
sql/: DDL.sql  Log.sql  dml_del_mail.sql  gmtools.sql  guild.sql  update20170705.sql
tools/: build.sh  cpConfig.bat  genArpc.bat  genArpc.sh  osxgen.sh  previous_dependents.bat  previous_dependents.py  rpc
(+8335 files in other folders)
