CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(server)

SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/)
SET(SERVER_VERSION_MAJOR 1)
SET(SERVER_VERSION_MINOR 0)
# configure a header file to pass some of the CMake settings.
CONFIGURE_FILE("Config.h.in" "Config.h")

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(Boost_USE_STATIC_LIBS ON)

IF(WIN32)
	INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/windows.cmake)
ELSEIF(APPLE)
	INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/macros.cmake)
	ADD_SUBDIRECTORY(gmtool)
ELSEIF(UNIX)
	INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/linux.cmake)
	ADD_SUBDIRECTORY(gmtool)
ENDIF()

#添加工程
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(tables)
ADD_SUBDIRECTORY(scene)
ADD_SUBDIRECTORY(login)
ADD_SUBDIRECTORY(mall)
ADD_SUBDIRECTORY(db)
ADD_SUBDIRECTORY(gateway)
ADD_SUBDIRECTORY(world)
#ADD_SUBDIRECTORY(log)
#ADD_SUBDIRECTORY(refreshsql)
#ADD_SUBDIRECTORY(test)



