INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/routine)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}   DB_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/routine ROUTINE_SRC)

ADD_EXECUTABLE(db ${DB_SRC} ${ROUTINE_SRC})

TARGET_LINK_LIBRARIES(db common ${MYSQL_LIBRARY} ${LINK_LIBRARYS} ${Boost_LIBRARIES})
ADD_DEPENDENCIES(db common)
INSTALL(TARGETS	db RUNTIME DESTINATION bin )
