INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} GMT_SRC)
ADD_EXECUTABLE(gmtool ${GMT_SRC})


TARGET_LINK_LIBRARIES(gmtool tables common ${MYSQL_LIBRARY} ${LINK_LIBRARYS} ${Boost_LIBRARIES})
ADD_DEPENDENCIES(gmtool common)
ADD_DEPENDENCIES(gmtool tables)
INSTALL(TARGETS	gmtool RUNTIME DESTINATION bin )
