INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/routine)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MALL_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/routine ROUTINE_SRC)
ADD_EXECUTABLE(mall ${MALL_SRC} ${ROUTINE_SRC})

TARGET_LINK_LIBRARIES(mall common ${MYSQL_LIBRARY}  ${LINK_LIBRARYS} ${Boost_LIBRARIES})
ADD_DEPENDENCIES(mall common)
INSTALL(TARGETS	mall RUNTIME DESTINATION bin )
