INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} REFRESHSQL_SRC)

ADD_EXECUTABLE(refreshsql ${REFRESHSQL_SRC})


TARGET_LINK_LIBRARIES(refreshsql common)

IF(WIN32)
	TARGET_LINK_LIBRARIES(refreshsql ACEd.lib)
	TARGET_LINK_LIBRARIES(refreshsql sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(refreshsql libACE.a)
	TARGET_LINK_LIBRARIES(refreshsql libsupc++.a)
	TARGET_LINK_LIBRARIES(refreshsql libmysqlcppconn-static.a)
	TARGET_LINK_LIBRARIES(refreshsql pthread)
	TARGET_LINK_LIBRARIES(refreshsql dl)
	TARGET_LINK_LIBRARIES(refreshsql rt)
	TARGET_LINK_LIBRARIES(refreshsql z)
	TARGET_LINK_LIBRARIES(refreshsql ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(refreshsql common)
INSTALL(TARGETS	refreshsql RUNTIME DESTINATION bin )