INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend)
IF(WIN32)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend/mysql/win32)
ELSE(UNIX)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend/mysql/linux)
ENDIF()
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend/lib)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}   BACKLOG_SRC)

ADD_EXECUTABLE(backlog ${BACKLOG_SRC})

TARGET_LINK_LIBRARIES(backlog common)
IF(WIN32)
	TARGET_LINK_LIBRARIES(backlog ACEd.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(backlog libACE.a)
	TARGET_LINK_LIBRARIES(backlog pthread)
	TARGET_LINK_LIBRARIES(backlog dl)
	TARGET_LINK_LIBRARIES(backlog ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(backlog common)
INSTALL(TARGETS	backlog RUNTIME DESTINATION bin )