INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SCENE_SRC)
ADD_EXECUTABLE(scene ${SCENE_SRC})


TARGET_LINK_LIBRARIES(scene tables common ${LINK_LIBRARYS} ${Boost_LIBRARIES})
ADD_DEPENDENCIES(scene common)
ADD_DEPENDENCIES(scene tables)
INSTALL(TARGETS	scene RUNTIME DESTINATION bin )
