INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)


#AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} TEST_SRC)

ADD_EXECUTABLE(test ${TEST_SRC})
TARGET_LINK_LIBRARIES(test tables)
TARGET_LINK_LIBRARIES(test common)

IF(WIN32)
	TARGET_LINK_LIBRARIES(test ACEd.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(test libACE.a)
	TARGET_LINK_LIBRARIES(test libsupc++.a)
	TARGET_LINK_LIBRARIES(test pthread)
	TARGET_LINK_LIBRARIES(test dl)
	TARGET_LINK_LIBRARIES(test z)
	TARGET_LINK_LIBRARIES(test ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(test common)
ADD_DEPENDENCIES(test tables)
INSTALL(TARGETS	test RUNTIME DESTINATION bin )
