INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/script)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/tables)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} WORLD_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/script SCRIPT_SRC)

ADD_EXECUTABLE(world ${WORLD_SRC} ${SCRIPT_SRC})

TARGET_LINK_LIBRARIES(world common tables ${LINK_LIBRARYS} ${CURL_LIBRARY} ${Boost_LIBRARIES})
ADD_DEPENDENCIES(world common)
ADD_DEPENDENCIES(world tables)
INSTALL(TARGETS	world RUNTIME DESTINATION bin )
